--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 	"engines": {
 		"vscode": "^1.39.0"
 	},
+	"icon": "https://raw.githubusercontent.com/gjhuerte/black-looks-good-vscode-theme/master/resources/black-looks-good-theme-256.png",
 	"categories": [
 		"Themes"
 	],
